staff page overflowing fixed

--- a/src/Pages/Staff/Components/Status/LeaveStatus.css
+++ b/src/Pages/Staff/Components/Status/LeaveStatus.css
@@ -25,7 +25,7 @@
 
 
 .staffLvStatus-popup-container {
-    min-width: 480px;
+    min-width: 350px;
     height: 350px;
     z-index: 100;
     background-color: white;
@@ -45,7 +45,6 @@
     width: 100%;
     border-collapse: collapse;
     font-size: .9rem;
-    
 }
 
 .selected {
