--- a/src/Pages/Staff/staff.css
+++ b/src/Pages/Staff/staff.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
     background: rgb(242, 244, 247);
     font-family: sans-serif;
 }
